--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -1059,11 +1059,18 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BML-Kk-CYm">
-                                <rect key="frame" x="195" y="51" width="97" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="300" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mo-gf-ZjH">
+                                <rect key="frame" x="254" y="54" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" wraps="YES" value="300" minimumValue="1" maximumValue="2700" translatesAutoresizingMaskIntoConstraints="NO" id="cvN-gF-3DM">
+                                <rect key="frame" x="152" y="50" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepper:" destination="B5T-AN-cDZ" eventType="valueChanged" id="BHo-WG-Gw9"/>
+                                </connections>
+                            </stepper>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1077,7 +1084,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="durationTextField" destination="BML-Kk-CYm" id="7W7-MX-A3m"/>
+                        <outlet property="durationLabel" destination="0mo-gf-ZjH" id="rA8-CJ-VFB"/>
                         <segue destination="lbE-km-Yzs" kind="push" identifier="generalWorkoutDetails" id="fU6-wJ-mkI"/>
                     </connections>
                 </viewController>
