--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -998,6 +998,7 @@
                         <segue destination="uo1-hw-v2I" kind="push" identifier="repsDetailsSegue" id="iLa-CI-clR"/>
                         <segue destination="B5T-AN-cDZ" kind="push" identifier="durationDetailSegue" id="EVt-xz-tPm"/>
                         <segue destination="BSG-jK-eZL" kind="push" identifier="intervalDetailsSegue" id="Ekc-jF-i8u"/>
+                        <segue destination="aE8-wz-MZl" kind="push" identifier="prebensDetailsSegue" id="5MR-Mp-kIP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1cD-hD-gBZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1411,13 +1412,104 @@
             </objects>
             <point key="canvasLocation" x="2180" y="-780"/>
         </scene>
+        <!--Prebens Info View Controller-->
+        <scene sceneID="7NF-3e-Una">
+            <objects>
+                <viewController storyboardIdentifier="PrebensInfoViewController" id="aE8-wz-MZl" customClass="PrebensInfoViewController" customModule="FHR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ICw-ny-AHc"/>
+                        <viewControllerLayoutGuide type="bottom" id="hAu-gt-8qK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tGl-yE-Hdc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7q1-zB-gbn">
+                                <rect key="frame" x="16" y="454" width="67" height="30"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancel:" destination="aE8-wz-MZl" eventType="touchUpInside" id="kfy-bx-dEs"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CSq-vF-6PZ">
+                                <rect key="frame" x="77" y="0.0" width="172" height="136"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="aE8-wz-MZl" id="IaL-Um-WYl"/>
+                                    <outlet property="delegate" destination="aE8-wz-MZl" id="yY8-4L-LtN"/>
+                                </connections>
+                            </pickerView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kml-bw-qqG">
+                                <rect key="frame" x="42" y="135" width="242" height="311"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="tableCell" textLabel="wBP-Xu-52Q" detailTextLabel="ZqS-q8-fFg" style="IBUITableViewCellStyleValue1" id="P4F-Wh-By0">
+                                        <rect key="frame" x="0.0" y="22" width="227" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P4F-Wh-By0" id="Xaj-G6-XtX">
+                                            <rect key="frame" x="0.0" y="0.0" width="227" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wBP-Xu-52Q">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZqS-q8-fFg">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="aE8-wz-MZl" id="cew-2g-veX"/>
+                                    <outlet property="delegate" destination="aE8-wz-MZl" id="cIS-c8-Fmr"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Akw-Dh-mwr">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="Ehr-PH-G3D">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="next:" destination="aE8-wz-MZl" id="7xp-4J-zXw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="kml-bw-qqG" id="hrV-zr-ZBk"/>
+                        <segue destination="FMn-yo-4cm" kind="modal" identifier="infoSegue" id="Avh-Av-anV"/>
+                        <segue destination="lbE-km-Yzs" kind="push" identifier="generalWorkoutDetails" id="qct-GB-qzC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VsP-FF-rzA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1974" y="-70"/>
+        </scene>
         <!--AV Player View Controller-->
         <scene sceneID="Fld-cd-r6e">
             <objects>
                 <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="uBZ-I9-UIw" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JU5-GJ-qsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1829" y="-92"/>
+            <point key="canvasLocation" x="2035" y="420"/>
         </scene>
         <!--Duration Info View Controller-->
         <scene sceneID="81u-tg-VE1">
@@ -1712,8 +1804,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="q3O-VS-miu"/>
-        <segue reference="wFi-Va-VqV"/>
+        <segue reference="Avh-Av-anV"/>
+        <segue reference="qct-GB-qzC"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
